# targus

test_argus/: CMakeLists.txt  build.cmd  test_argus.sln
test_argus/cmake/: FindMagick.cmake
test_argus/imagemagick/include/Magick++/: Image.h  Include.h  STL.h
test_argus/imagemagick/include/MagickCore/: MagickCore.h  accelerate-kernels-private.h  accelerate-private.h  animate-private.h  animate.h  annotate-private.h  annotate.h  artifact.h  attribute.h  blob-private.h  blob.h  cache-private.h  cache-view.h  cache.h  channel.h  cipher.h  client.h  coder-private.h  coder.h  color-private.h  color.h  colormap-private.h  colormap.h  colorspace-private.h  colorspace.h  compare.h  composite-private.h  composite.h  compress.h  configure-private.h  configure.h  constitute-private.h  constitute.h  decorate.h  delegate-private.h  delegate.h  deprecate.h  display-private.h  display.h  distort.h  (+118 more)
test_argus/imagemagick/include/MagickWand/: MagickWand.h  animate.h  compare.h  composite.h  conjure.h  convert.h  deprecate.h  display.h  drawing-wand.h  identify.h  import.h  magick-cli.h  magick-image.h  magick-property.h  magick-wand-private.h  method-attribute.h  mogrify-private.h  mogrify.h  montage.h  operation-private.h  operation.h  pixel-iterator.h  pixel-wand-private.h  pixel-wand.h  (+7 more)
test_argus/test_argus/: BlurCommand.cpp  BlurCommand.h  Command.h  ExitCommand.cpp  ExitCommand.h  FactoryCommands.cpp  FactoryCommands.h  HelpCommand.cpp  HelpCommand.h  LoadCommand.cpp  LoadCommand.h  ResizeCommand.cpp  ResizeCommand.h  StoreCommand.cpp  StoreCommand.h  main.cpp  utility.h
